--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,10 @@
     "commonjs": true,
     "es6": true,
     "node": true
+  },
+  "rules": {
+    "react/prop-types": "off",
+    "react/forbid-prop-types": "off",
+    "react/destructuring-assignment": "off"
   }
 }
