--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Florida Blue code sample",
   "main": "index.js",
   "scripts": {
-    "prestart": "NODE_ENV=production webpack -p --config webpack.config.js --progress --colors",
+    "prestart": "NODE_ENV=production PORT=3000 HOST=0.0.0.0 webpack -p --config webpack.config.js --progress --colors",
     "start": "node index.js"
   },
   "author": "Don Brody",
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^3.1.0",
+    "@material-ui/icons": "^3.0.1",
+    "colors": "^1.3.2",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
@@ -20,8 +23,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
