--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
     "uglifyjs-webpack-plugin": "^2.0.1"
   },
   "devDependencies": {
